--- a/index.html
+++ b/index.html
@@ -37,13 +37,84 @@
             min-height: calc(100vh - 70px);
             scroll-snap-align: start;
         }
+        .spinner {
+            animation: rotate 2s linear infinite;
+            z-index: 2;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            margin: -25px 0 0 -25px;
+            width: 50px;
+            height: 50px;
+            
+            & .path {
+                stroke: hsl(175, 100%, 50%);
+                stroke-linecap: round;
+                animation: dash 1.5s ease-in-out infinite;
+            }
+        }
+
+        @keyframes rotate {
+        100% {
+            transform: rotate(360deg);
+        }
+        }
+
+        @keyframes dash {
+        0% {
+            stroke-dasharray: 1, 150;
+            stroke-dashoffset: 0;
+        }
+        50% {
+            stroke-dasharray: 90, 150;
+            stroke-dashoffset: -35;
+        }
+        100% {
+            stroke-dasharray: 90, 150;
+            stroke-dashoffset: -124;
+        }
+        }
     </style>
 </head>
 <body>
     <nav id="navbar"> Flights </nav>
     <main id="screens">
-        <div id="screen-flights" class="screen"> Flights </div>
-        <div id="screen-rewards" class="screen"> Rewards </div>
+        <div id="screen-flights" class="screen"> 
+            <svg class="spinner" viewBox="0 0 50 50">
+                <circle class="path" cx="25" cy="25" r="20" fill="none" stroke-width="5"></circle>
+            </svg>
+        </div>
+        <div id="screen-rewards" class="screen">
+            <svg class="spinner" viewBox="0 0 50 50">
+                <circle class="path" cx="25" cy="25" r="20" fill="none" stroke-width="5"></circle>
+            </svg>
+        </div>
     </main>
+
+    <script>
+        const screens = document.querySelector("#screens");
+        const navbar = document.querySelector("#navbar");
+
+        const pages = ["Flights", "Rewards"];
+        const debounce = (func, wait, immediate) => {
+            var timeout;
+            return (...args) => {
+            const later = () => {
+                timeout = null;
+                if (!immediate) func.apply(this, args);
+            };
+            const callNow = immediate && !timeout;
+            clearTimeout(timeout);
+            timeout = setTimeout(later, wait);
+            if (callNow) func.apply(this, args);
+            };
+        };
+
+        const pageTransition = debounce(() => {
+            const index = Math.round(screens.scrollLeft / window.innerWidth);
+            navbar.textContent = pages[index];
+        }, 60);
+        screens.addEventListener("scroll", pageTransition);
+    </script>
 </body>
 </html>
